--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ iframe {
 }
 
 .opening .card {
-  background: blsck;
+  background: black;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
