--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: linear-gradient(to right, #b993d6, #8ca6db);
   font-family: 'Segoe UI', sans-serif;
-  color: black;
+  color: red;
   text-align: center;
   margin: 0;
 }
